# nopause-python

./: .gitignore  LICENSE  README.md  setup.cfg
.github/workflows/: release-to-pypi.yml
examples/: async_stream_play_with_chatgpt.py  async_stream_play_with_chatgpt_pyaudio.py  async_stream_play_with_chatgpt_sounddevice.py  async_stream_play_with_chatgpt_sounddevice_callback.py  chat.py  stream_play_with_chatgpt.py  stream_play_with_chatgpt_pyaudio.py  stream_play_with_chatgpt_sounddevice.py
nopause/: __init__.py
nopause/core/: __init__.py  audio.py  base.py
nopause/sdk/: __init__.py  base.py  config.py  error.py  synthesis.py  voice.py
nopause/utils/: timestamp.py
tests/: test_cancel.py  test_cancel_async.py
