[metadata]
name = nopause
version = attr: nopause.version.VERSION
description = Python client SDK for the NoPause API
long_description = file: README.md
long_description_content_type = text/markdown
author = NoPause
author_email = hellotts@nopause.com
url = https://github.com/nopause-io/nopause-python
license_files = LICENSE
classifiers =
  Programming Language :: Python :: 3
  License :: OSI Approved :: Apache License, Version 2.0
  Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7.1
zip_safe = True
include_package_data = True
install_requires =
  requests >= 2.20  # to get the patch for CVE-2018-18074
  aiohttp  # Needed for async support